# Praxile

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.zh-CN.md  SECURITY.md  install.sh  praxile.config.example.json  praxile_semantic_judges_four_phase_iteration.md  pyproject.toml
.github/workflows/: release-check.yml  tests.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CONFIGURATION.md  CORE_LAYERS.md  EVALS_AND_ADAPTERS.md  EXPERIENCE_MODEL.md  GETTING_STARTED.md  GOVERNANCE.md  INSTALL_AND_INTEROP.md  PRODUCT_VISION.md  REFLECT.md  SECURITY_MODEL.md  SPEC_AWARE_WORKFLOW.md  STATE_LAYOUT.md  WEB_CONSOLE.md  WHY_PRAXILE.md  audit-governance.md  contributing-testing.md  experience-governance.md  proposal-decision-guide.md
examples/: README.md
examples/github-actions/: praxile-reflect.yml
examples/go/: README.md  go.mod  hello.go  hello_test.go
examples/react/: README.md  index.html  package.json
examples/rust/: Cargo.toml  README.md
praxile/: README.md  __init__.py  action_schema.py  adapter_bridge.py  audit.py  browser.py  channels.py  cli.py  config.py  console.py  consolidation.py  constants.py  environment.py  episodes.py  evidence.py  evolution.py  feedback.py  gateway.py  github.py  graph.py  http_transport.py  hypothesis.py  identity.py  indexing.py  inspector.py  interop.py  json_utils.py  memory.py  model.py  patterns.py  project_map.py  proposals.py  retrieval.py  reward.py  runtime.py  search_backend.py  security.py  semantic_judges.py  silent_failure.py  skills.py  (+10 more)
praxile/adapters/: __init__.py  base.py  jsonl_adapter.py
praxile/core/: __init__.py  judges.py
praxile/docs/: ARCHITECTURE.md  CONFIGURATION.md  CORE_LAYERS.md  GETTING_STARTED.md  INSTALL_AND_INTEROP.md  PRODUCT_VISION.md  STATE_LAYOUT.md  experience-governance.md  proposal-decision-guide.md
praxile/eval/: __init__.py  metrics.py  runner.py  suite.py
praxile/examples/: trajectory-minimal.json
praxile/judges/: __init__.py  duplication.py  feedback_classifier.py  pattern_miner.py  risk_detector.py
praxile/llm/: __init__.py  client.py  parser.py  prompts.py
praxile/reflect/: __init__.py  engine.py
scripts/: clean_release.py
tests/: conftest.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  (+2 more)
(+65 files in other folders)
